--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>My-Resume</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <a href="#home" class="logo">MyResume</a>
+            <a href="#home" class="logo">My-Resume</a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#education">Edu</a></li>
-                <li><a href="#experience1">EXP1</a></li>
-                <li><a href="#experience2">EXP2</a></li>
-                <li><a href="#experience3">EXP3</a></li>
-                <li><a href="#experience4">EXP4</a></li>
-                <li><a href="#experience5">EXP5</a></li>
+                <li><a href="#experience1">LUMIN</a></li>
+                <li><a href="#experience2">LA24</a></li>
+                <li><a href="#experience3">ILITS24</a></li>
+                <li><a href="#experience4">KONBA</a></li>
+                <li><a href="#experience5">ILITS23</a></li>
             </ul>
         </div>
     </nav>
@@ -43,9 +43,15 @@
                         meaningful connections between technology and creativity.
                     </p>
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/in/nadia-nathania-5a2506291/" class="social-icon">in</a>
-                        <a href="https://www.instagram.com/navithania" class="social-icon">IG</a>
-                        <a href="#" class="social-icon">:)</a>
+                        <a href="https://www.linkedin.com/in/nadia-nathania-5a2506291/" class="social-icon">
+                            <img src="images/linkedin.png" alt="LinkedIn">
+                        </a>
+                        <a href="https://www.instagram.com/navithania" class="social-icon">
+                            <img src="images/instagram.png" alt="Instagram">
+                        </a>
+                        <a href="mailto:navithania@gmail.com" class="social-icon">
+                            <img src="images/email.png" alt="Email">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -55,7 +61,7 @@
     <!-- Education Section -->
     <section id="education">
         <div class="container">
-            <h2>My Education</h2>
+            <h2>Educational Background</h2>
             <div class="education-container">
                 <div class="education-card">
                     <div class="education-card-header">
@@ -83,6 +89,7 @@
                     <h2>LUMINEOS 2024</h2>
                     <h3>March 2024 – May 2024 </h3>
                     <h4>Position: Staff of Branding </h4>
+                    <p></p>
                     <p>
                         Key Responsibilities:
                     </p>
@@ -149,7 +156,7 @@
                     <h3>November 2022 – May 2023</h3>
                     <h4>Position: Head of Coaching Department </h4>
                     <p>
-                        <i>Take part as a singer (in the choir team) as well! </i> </p>
+                        <i>Took part as a singer (in the choir team) as well! </i> </p>
                     <p>
                         Key Responsibilities:
                     </p>
@@ -171,7 +178,7 @@
                 <div class="experience-content">
                     <h2>ILITS! Forda Salatiga 2023  </h2>
                     <h3>November 2022 – February 2023</h3>
-                    <p>Position: Staff of Event </p>
+                    <h4>Position: Staff of Event </h4>
                     <p>
                         <i>A part of Ini Lho ITS! 2023</i> </p>
                     <p>
